--- a/SharpDocx/TODO.txt
+++ b/SharpDocx/TODO.txt
@@ -1,15 +1,14 @@
 ﻿-Insert merge fields.
--Image path should be configurable.
 
 Consider:
 -Show inheritance model in Tutorial (see also https://msdn.microsoft.com/en-us/library/ms178138.aspx).
 -ElementAppender supports only one template row/paragraph in a code block at a time. Maybe support multiple templates per code block.
 -Implement ViewBag.
--Use a proper C# parser, so there are no issues with e.g. brackets in strings/comments/etc.
--Support code blocks in for DocumentFormat.OpenXml.Vml.TextPath.String.
+-Use a proper C# parser, so there are no potential issues with e.g. brackets in strings/comments/etc.
+-Support code blocks in DocumentFormat.OpenXml.Vml.TextPath.String.
 -Use XML documentation comments.
 -Support C# 6.
--Create samples with a nice form / barcode / nice model (maybe a model based on https://www.theimdbapi.org/).
+-Create samples with a nice form / barcode / complex model (maybe a model based on https://www.theimdbapi.org/).
 
 Won't fix:
 -Support contructed generic types as Model in .NET v3.5. 
