Introduced document directives. Added support for referencing assemblies and importing namespaces in views. Examples: -To reference an assembly, use <%@ Assembly Name="System.Speech" %>. -To use a namespace, use <%@ Import Namespace="System.Speech.Synthesis" %>.

--- a/SharpDocx/TODO.txt
+++ b/SharpDocx/TODO.txt
@@ -1,4 +1,6 @@
-﻿-Insert merge fields.
+﻿-Multiple calls to write in the same code block should be handled correctly.
+-Insert merge fields.
+-Directive sample.
 
 Consider:
 -Show inheritance model in Tutorial (see also https://msdn.microsoft.com/en-us/library/ms178138.aspx).
