Added partial support for .NET Standard 2.0.

--- a/SharpDocx/TODO.txt
+++ b/SharpDocx/TODO.txt
@@ -1,4 +1,6 @@
-﻿
+﻿Todo:
+-Implement ImageHelper.CreateDrawing for .NET Standard.
+
 Consider:
 -Reuse image parts where possible. 
 -Support C# 6.
